website/websites/gp4/code/partialsums-icc-4.log
BUILD COMMANDS FOR: partialsums.icc-4.icc

Tue Apr 29 16:52:46 PDT 2008

/opt/intel/cc/10.1.012/bin/icc  partialsums.icc-4.c -o partialsums.icc-4.icc_run
partialsums.icc-4.c(33): warning #266: function "atoi" declared implicitly
      int n;  n = atoi(argv[1]);
                  ^

partialsums.icc-4.c(51): error: expression must have arithmetic or pointer type
      for (kv=init; *(double *)(&kv)<=n; kv+=two)
                                         ^

partialsums.icc-4.c(53): error: expression must have arithmetic or pointer type
          poly    += one /(kv*(kv+one)); 
                               ^

partialsums.icc-4.c(53): error: expression must have arithmetic type
          poly    += one /(kv*(kv+one)); 
                           ^

partialsums.icc-4.c(53): error: expression must have arithmetic type
          poly    += one /(kv*(kv+one)); 
                     ^

partialsums.icc-4.c(53): error: expression must have arithmetic or pointer type
          poly    += one /(kv*(kv+one)); 
          ^

partialsums.icc-4.c(54): error: expression must have arithmetic type
          Harmonic+= one / kv;
                     ^

partialsums.icc-4.c(54): error: expression must have arithmetic type
          Harmonic+= one / kv;
                           ^

partialsums.icc-4.c(54): error: expression must have arithmetic or pointer type
          Harmonic+= one / kv;
          ^

partialsums.icc-4.c(55): error: expression must have arithmetic type
          zeta    += one /(kv*kv);
                           ^

partialsums.icc-4.c(55): error: expression must have arithmetic type
          zeta    += one /(kv*kv);
                              ^

partialsums.icc-4.c(55): error: expression must have arithmetic type
          zeta    += one /(kv*kv);
                     ^

partialsums.icc-4.c(55): error: expression must have arithmetic or pointer type
          zeta    += one /(kv*kv);
          ^

partialsums.icc-4.c(56): error: expression must have arithmetic type
          alt     +=  av / kv;  
                      ^

partialsums.icc-4.c(56): error: expression must have arithmetic type
          alt     +=  av / kv;  
                           ^

partialsums.icc-4.c(56): error: expression must have arithmetic or pointer type
          alt     +=  av / kv;  
          ^

partialsums.icc-4.c(57): error: expression must have arithmetic type
          Gregory +=  av /(two*kv - one);
                           ^

partialsums.icc-4.c(57): error: expression must have arithmetic type
          Gregory +=  av /(two*kv - one);
                               ^

partialsums.icc-4.c(57): error: expression must have arithmetic type
          Gregory +=  av /(two*kv - one);
                      ^

partialsums.icc-4.c(57): error: expression must have arithmetic or pointer type
          Gregory +=  av /(two*kv - one);
          ^

compilation aborted for partialsums.icc-4.c (code 2)
make[3]: [partialsums.icc-4.icc_run] Error 2 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

partialsums.icc-4.icc_run %A
Error, could not exec partialsums.icc-4.icc_run 25000 (No such file or directory)
PATH=/home/dunham/gp4/shootout/bench/partialsums:/home/dunham/gp4/shootout/bench/partialsums/tmp:/opt/intel/cc/10.1.012/bin:/opt/intel/fc/10.1.012/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin:/usr/i686-pc-linux-gnu/gcc-bin/4.1.2:/opt/sun-jdk-1.4.2.16/bin:/opt/sun-jdk-1.4.2.16/jre/bin:/opt/sun-jdk-1.4.2.16/jre/javaws:/usr/qt/3/bin:/usr/i686-pc-linux-gnu/gnat-gpl-bin/4.1:/usr/libexec/gnat-gpl/i686-pc-linux-gnu/4.1:/usr/games/bin:/opt/cint-5.16.19:/opt/kroc-1.4.0/install/bin:/opt/sun-jdk-1.6.0.06/bin:/opt/sun-jdk-1.4.2.16/bin:/opt/mozart/bin:/opt/groovy-1.5.4/bin:/opt/smlnj/bin:/usr/local/lib/squeak/3.9-8:/opt/stx:/opt/jruby-1.1b1/bin:/opt/Quark:/opt/gnat/bin
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
